# quaternions

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  TODO.md
.claude/: settings.local.json
src/: lib.rs  main.rs
src/export/: animation.rs  mod.rs  screenshot.rs
src/gpu/: buffers.rs  mod.rs  pipeline.rs
src/math/: fdtd.rs  mod.rs  quaternion.rs  vector_field.rs
src/scenarios/: aharonov_bohm.rs  bifilar_coil.rs  brown_capacitor.rs  casimir.rs  charge_cluster.rs  dipole_radiation.rs  graneau_wire.rs  mod.rs  pulsed_circuit.rs  toroidal_ab.rs
src/simulation/: boundaries.rs  diagnostics.rs  field_update.rs  grid.rs  mod.rs  particles.rs  plugin.rs  sources.rs  state.rs  vacuum_update.rs  weber.rs
src/ui/: diagnostics_panel.rs  export_panel.rs  mod.rs  parameter_panel.rs  plugin.rs  source_editor.rs  visualization_panel.rs
src/visualization/: color_maps.rs  geometry.rs  glyphs.rs  isosurface.rs  mod.rs  plugin.rs  quaternion_viz.rs  slices.rs  streamlines.rs  volume.rs
tests/: cpml_tests.rs  integration_phase1.rs
